# 6.837

./: README.txt
Assignment 1/: CMakeLists.txt  camera.C  camera.h  group.C  hit.h  sphere.C  sphere.h
Assignment 2/: CMakeLists.txt  camera.cpp  camera.h  group.h  main.cpp  plane.cpp  plane.h  renderer.cpp  scene_parser.cpp  sphere.cpp  sphere.h  transform.cpp  transform.h  triangle.cpp  triangle.h
Assignment 2/images/: depth2_06.tga  normals2_04.tga  normals2_14.tga  normals2_15.tga  output2_04.tga  output2_06.tga  output2_07.tga  output2_14.tga
Assignment 3/: CMakeLists.txt  camera.cpp  glCanvas.h  global.cpp  global.h  main.cpp  material.h  plane.h  renderer.cpp  renderer.h  sphere.h  transform.cpp  transform.h
Assignment 4/: camera.h  global.cpp  global.h  group.cpp  group.h  main.cpp  material.cpp  material.h  object3d.h  plane.cpp  ray_tracer.C  ray_tracer.h  renderer.cpp  renderer.h  scene_parser.C  sphere.cpp  triangle.cpp  triangle.h
Assignment 5/: CMakeLists.txt  boundingbox.C  camera.cpp  camera.h  global.cpp  global.h  grid.cpp  grid.h  group.h  light.C  main.cpp  material.h  object3d.h  plane.cpp  plane.h  rayTree.C  ray_tracer.C  ray_tracer.h  renderer.cpp  sphere.cpp  sphere.h  transform.h  triangle.cpp  triangle.h
Assignment 6/: CMakeLists.txt  camera.cpp  global.cpp  global.h  grid.cpp  grid.h  group.cpp  group.h  main.cpp  object3d.h  plane.cpp  ray.h  rayTree.h  ray_tracer.C  ray_tracer.h  renderer.cpp  renderer.h  triangle.cpp
Assignment 7/: CMakeLists.txt  film.C  filter.C  filter.h  glCanvas.C  global.cpp  global.h  main.cpp  material.h  (+11 more)
(+90 files in other folders)
